--- a/src/views/createItem.ejs
+++ b/src/views/createItem.ejs
@@ -6,7 +6,7 @@
     <title>Create Item</title>
 </head>
 <body>
-    <form action="/items/create" method="POST">
+    <form action="/items/create" method="POST" enctype="multipart/form-data">
         <p>
             <label for="name">Name: </label>
             <input type="text" name="name" id="name">
@@ -23,6 +23,7 @@
             <label for="image">Image: </label>
             <input type="file" name="image" id="image" accept="image/*">
         </p>
+        <button type="submit">Create Item</button>
     </form>
 </body>
 </html>
