--- a/src/views/items.ejs
+++ b/src/views/items.ejs
@@ -22,12 +22,7 @@
 
     <ul>
     <% items.forEach(item => { %>
-        <li>
-        <h3><%= item.name %></h3>
-        <img src="<%= item.img_path %>" alt="<%= item.name %>" width="150">
-        <p>Price: $<%= item.price %></p>
-        <p>Category: <%= item.category_name %></p>
-        </li>
+        <%- include('./item.ejs', { item: item }) %>
     <% }) %>
     </ul>
 </body>
